# Manual

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml  sandbox-enforcement.yml
.zed/: settings.json
app/android/: settings.gradle.kts
app/cli/: Cargo.toml
app/ios/: Package.swift  README.md
app/mac/: Package.swift
app/src/: main.rs
app/window/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ManualWindow.csproj  ManualWindow.sln  Program.cs  README.md  app.manifest
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
crates/agent/: Cargo.toml
crates/agent-gui/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/tests/: agent_gui_integration.rs  job_gui.rs  manual_app_integration.rs  sandbox_gui_integration.rs  script_gui_integration.rs  workflow_gui_integration.rs
crates/graph-viewer/: Cargo.toml
crates/job/: Cargo.toml
crates/job-gui/: Cargo.toml
crates/job-registry/: Cargo.toml
crates/node/: Cargo.toml
crates/node-gui/: Cargo.toml
crates/runtime/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/sandbox-gui/: Cargo.toml
crates/sandbox-registry/: Cargo.toml
crates/script/: Cargo.toml
crates/script-gui/: Cargo.toml
crates/script-registry/: Cargo.toml
crates/skill/: Cargo.toml
crates/workflow/: Cargo.toml
crates/workflow-gui/: Cargo.toml
crates/workflow-registry/: Cargo.toml
crates/workflow-viewer/: Cargo.toml
docs/: README.md  agents.html  agents.md  architecture.html  architecture.md  build.mjs  cli-and-skill.html  cli-and-skill.md  github-pages.html  github-pages.md  index.html  product.html  product.md  roadmap.html  roadmap.md  sandbox.html  sandbox.md  workflow.html  workflow.md
docs/assets/: site.css
docs/raw/: 문제-정의.md
docs/test/: Cargo.toml
docs/usecase/: 노드-스토리북.feature  매뉴얼-관리.feature  매뉴얼-자기진화-기능.feature  매뉴얼-최적화-기능.feature  부분-실행과-재시작.feature  샌드박스-기능.feature  에이전트-스킬-지정.feature
docs/wiki/: 개요.md  목차.md  위키-스키마.md  작업-로그.md  테스트-규칙.md
manual-rs/: Cargo.toml
manual-rs/crates/app-server/: Cargo.toml
manual-rs/crates/app-server/src/: lib.rs  main.rs  workflow_store.rs
manual-rs/crates/app-server/tests/: http_daemon.rs  json_rpc_workflow.rs  optimization_data_driven.rs  restart_recovery.rs  usecase_contracts.rs
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  previously_caught.txt  timeout.txt  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: crates__agent__src__claude.rs_line_30_col_9.diff  crates__agent__src__claude.rs_line_35_col_9.diff  crates__agent__src__claude.rs_line_40_col_9.diff  crates__agent__src__claude.rs_line_45_col_9.diff  crates__agent__src__claude.rs_line_50_col_9.diff  crates__agent__src__claude.rs_line_55_col_9.diff  crates__agent__src__claude.rs_line_61_col_5.diff  crates__agent__src__claude.rs_line_65_col_5.diff  crates__agent__src__codex.rs_line_26_col_9.diff  crates__agent__src__codex.rs_line_31_col_9.diff  crates__agent__src__codex.rs_line_36_col_9.diff  crates__agent__src__codex.rs_line_41_col_9.diff  crates__agent__src__codex.rs_line_47_col_5.diff  crates__agent__src__codex.rs_line_51_col_5.diff  crates__agent__src__codex.rs_line_55_col_5.diff  crates__agent__src__lib.rs_line_117_col_9.diff  crates__agent__src__lib.rs_line_117_col_9_001.diff  crates__agent__src__lib.rs_line_122_col_51.diff  crates__agent__src__lib.rs_line_141_col_9.diff  crates__agent__src__lib.rs_line_141_col_9_001.diff  crates__agent__src__lib.rs_line_141_col_9_002.diff  crates__agent__src__lib.rs_line_148_col_9.diff  crates__agent__src__lib.rs_line_156_col_9.diff  crates__agent__src__lib.rs_line_156_col_9_001.diff  crates__agent__src__lib.rs_line_32_col_9.diff  crates__agent__src__lib.rs_line_41_col_9.diff  crates__agent__src__lib.rs_line_46_col_9.diff  crates__agent__src__lib.rs_line_51_col_9.diff  crates__agent__src__lib.rs_line_51_col_9_001.diff  crates__agent__src__lib.rs_line_55_col_9.diff  crates__agent__src__lib.rs_line_55_col_9_001.diff  crates__agent__src__lib.rs_line_55_col_9_002.diff  crates__agent__src__lib.rs_line_59_col_9.diff  crates__agent__src__lib.rs_line_59_col_9_001.diff  crates__agent__src__lib.rs_line_63_col_9.diff  crates__agent__src__lib.rs_line_74_col_9.diff  crates__app__src__lib.rs_line_4_col_5.diff  crates__app__src__lib.rs_line_4_col_5_001.diff  crates__cli__src__lib.rs_line_16_col_9.diff  crates__cli__src__lib.rs_line_32_col_5.diff  (+216 more)
mutants.out/diff/: crates__app__src__main.rs_line_2_col_5.diff  crates__cli__src__lib.rs_line_57_col_5.diff  crates__cli__src__lib.rs_line_57_col_5_001.diff  crates__graph-viewer__src__main.rs_line_15_col_9.diff  crates__graph-viewer__src__main.rs_line_7_col_5.diff  crates__graph-viewer__src__view.rs_line_240_col_11.diff  crates__graph-viewer__src__view.rs_line_240_col_11_001.diff  crates__graph-viewer__src__view.rs_line_249_col_11.diff  crates__graph-viewer__src__view.rs_line_264_col_28.diff  crates__graph-viewer__src__view.rs_line_264_col_28_001.diff  crates__graph-viewer__src__view.rs_line_266_col_15.diff  crates__graph-viewer__src__view.rs_line_270_col_26.diff  crates__graph-viewer__src__view.rs_line_270_col_26_001.diff  crates__graph-viewer__src__view.rs_line_271_col_23.diff  crates__graph-viewer__src__view.rs_line_272_col_22.diff  crates__graph-viewer__src__view.rs_line_272_col_22_001.diff  crates__graph-viewer__src__view.rs_line_272_col_29.diff  crates__graph-viewer__src__view.rs_line_272_col_29_001.diff  (+310 more)
scripts/: demo-optimization.sh  package-release.sh  render-install.sh  test-demo-smoke.sh  test-install-smoke.sh  test-rendered-install-default-version.sh  test-window-ui-smoke.sh
tmp/: multi-agent-code-review.json
usecase/: 매뉴얼-관리.feature  매뉴얼-자기진화-기능.feature  매뉴얼-최적화-기능.feature  샌드박스-기능.feature
wiki/: index.md  log.md  overview.md
(+244 files in other folders)
