[workspace]
members = [
    "crates/core",
    "crates/node",
    "crates/workflow",
    "crates/workflow-registry",
    "crates/job",
    "crates/job-registry",
    "crates/app",
    "crates/cli",
    "crates/skill",
    "crates/agent",
    "crates/script",
    "crates/script-registry",
    "crates/sandbox",
    "crates/sandbox-registry",
    "crates/runtime",
    "crates/graph-viewer",
    "crates/workflow-viewer",
    "crates/node-gui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
manual_core = { package = "manual-core", path = "crates/core" }
node = { path = "crates/node" }
workflow = { path = "crates/workflow" }
workflow_registry = { package = "workflow-registry", path = "crates/workflow-registry" }
job = { path = "crates/job" }
job_registry = { package = "job-registry", path = "crates/job-registry" }
agent = { path = "crates/agent" }
script = { path = "crates/script" }
script_registry = { package = "script-registry", path = "crates/script-registry" }
sandbox = { path = "crates/sandbox" }
sandbox_registry = { package = "sandbox-registry", path = "crates/sandbox-registry" }
runtime = { path = "crates/runtime" }
cli = { path = "crates/cli" }
manual_graph_viewer = { package = "manual-graph-viewer", path = "crates/graph-viewer" }
workflow_viewer = { package = "workflow-viewer", path = "crates/workflow-viewer" }
node_gui = { package = "node-gui", path = "crates/node-gui" }
