[package]
name = "app-server"
version = "0.1.0"
edition = "2024"

[dependencies]
manual-node = { path = "../manual-node" }
manual-worflow = { path = "../manual-worflow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
cucumber = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "usecase_contracts"
harness = false
