[package]
name = "app-server"
version = "0.1.0"
edition = "2024"

[dependencies]
manual-agent = { path = "../manual-agent" }
manual-core = { path = "../manual-core" }
manual-node = { path = "../manual-node" }
manual-optimization = { path = "../manual-optimization" }
manual-sandbox = { path = "../manual-sandbox" }
manual-skill = { path = "../manual-skill" }
manual-worflow = { path = "../manual-worflow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
cucumber = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "usecase_contracts"
harness = false
